# compass

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  PERFORMANCE.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  compatibility.toml  deny.toml
crates/compass-cargo/: Cargo.toml
crates/compass-cargo/src/: lib.rs
crates/compass-cargo/tests/: python_oracle.rs
crates/compass-cli/: Cargo.toml  build.rs
crates/compass-cli/assets/: command-kilo.md  graphify-help.txt  skill-aider.md  skill-amp.md  skill-codex.md  skill-devin.md  skill-droid.md  skill-kilo.md  skill-opencode.md  skill-trae.md  skill-vscode.md  skill-windows.md  skill.md
crates/compass-cli/graphify-out/: manifest.json
crates/compass-cli/src/: dedup_commands.rs  help.rs  history_build.rs  history_commands.rs  hook_commands.rs  ingest_commands.rs  install_commands.rs  integration_commands.rs  label_commands.rs  lib.rs  program_commands.rs  provider_commands.rs  prs_commands.rs  query_commands.rs  result_commands.rs  semantic_commands.rs
crates/compass-cli/tests/: add_cli.rs  cargo_extract.rs  cluster_cli.rs  compass_product.rs  compassql_cli.rs  coverage_paths.rs  dedup_extract.rs  diagnose_cli.rs  extract_cli.rs  global_cli.rs  google_workspace_extract.rs  graphdb_export.rs  help_cli.rs  history_cli.rs  hook_cli.rs  install_cli.rs  integration_cli.rs  label_cli.rs  postgres_extract.rs  program_cli.rs  provider_cli.rs  prs_cli.rs  reflect_cli.rs  save_result_cli.rs  semantic_extract.rs  tree_cli.rs  update_cli.rs  watch_cli.rs
crates/compass-core/: Cargo.toml
crates/compass-core/src/: cluster_existing.rs  history.rs  lib.rs  merge.rs  pipeline.rs  program.rs  raw_guard.rs  watch.rs
crates/compass-core/tests/: history_materialize.rs  loading_coverage.rs  program_pipeline.rs
crates/compass-cypher/: Cargo.toml
crates/compass-cypher/src/: ast.rs  diagnostic.rs  lexer.rs  lib.rs  optimize.rs  parser.rs  plan.rs  semantic.rs  span.rs  support.rs  token.rs  value.rs
crates/compass-cypher/tests/: core_language.rs  tck.rs
crates/compass-files/: Cargo.toml
crates/compass-files/src/: atomic.rs  build_guard.rs  cache.rs  detect.rs  hash.rs  lib.rs  manifest.rs  slice.rs
crates/compass-files/tests/: contracts.rs
crates/compass-global/: Cargo.toml
crates/compass-global/src/: lib.rs
crates/compass-global/tests/: coverage_paths.rs
crates/compass-graphdb/: Cargo.toml
crates/compass-graphdb/src/: bolt.rs  lib.rs  queries.rs  resp.rs
crates/compass-graphdb/tests/: python_oracle.rs
crates/compass-history/: Cargo.toml
crates/compass-history/src/: artifacts.rs  canonical.rs  config.rs  diff.rs  durable.rs  error.rs  fingerprint.rs  gc.rs  git.rs  jobs.rs  keys.rs  leases.rs  lib.rs  lock.rs  model.rs  store.rs  validate.rs
crates/compass-history/tests/: canonical.rs  diff.rs  git.rs  jobs.rs  maintenance.rs  performance.rs  publication.rs  roundtrip.rs  sqlite_contract.rs
crates/compass-ir/: Cargo.toml
crates/compass-ir/src/: canonical.rs  lib.rs  model.rs  validation.rs
crates/compass-ir/tests/: schema.rs
crates/compass-languages/: Cargo.toml
crates/compass-languages/examples/: extract.rs
crates/compass-languages/src/: apex.rs  bash.rs  config.rs  cpp.rs  csharp.rs  dart.rs  dm.rs  dotnet_project.rs  elixir.rs  engine.rs  facts.rs  fortran.rs  go.rs  groovy.rs  ids.rs  json_config.rs  julia.rs  lib.rs  markdown.rs  mcp.rs  objc.rs  package_manifest.rs  pascal.rs  pascal_forms.rs  php.rs  powershell.rs  r.rs  registry.rs  rust_lang.rs  scip.rs  sql.rs  swift.rs  templates.rs  terraform.rs  verilog.rs  xaml.rs  zig.rs
crates/compass-languages/tests/: engine_edge_coverage.rs  markdown_coverage.rs  package_manifest_coverage.rs  program_evidence.rs  registry.rs  scip_oracle.rs  xaml_coverage.rs
crates/compass-mcp/: Cargo.toml
crates/compass-mcp/src/: lib.rs  transport.rs
crates/compass-mcp/tests/: coverage_paths.rs
crates/compass-model/: Cargo.toml
crates/compass-model/src/: document.rs  error.rs  graph.rs  lib.rs  query_index.rs  validation.rs
crates/compass-model/tests/: contracts_coverage.rs  validation_oracle.rs
crates/compass-parity/: Cargo.toml
crates/compass-parity/src/: lib.rs
crates/compass-postgres/: Cargo.toml
crates/compass-postgres/src/: lib.rs
crates/compass-postgres/tests/: coverage_paths.rs  python_oracle.rs
crates/compass-prs/: Cargo.toml
crates/compass-prs/src/: lib.rs
crates/compass-prs/tests/: coverage_paths.rs
crates/compass-query/: Cargo.toml
crates/compass-query/src/: affected.rs  benchmark.rs  lib.rs  score.rs  text.rs  traversal.rs
crates/compass-query/tests/: coverage_paths.rs  cql_execution.rs  neo4j_differential.rs  opencypher_tck.rs
crates/compass-resolve/: Cargo.toml
crates/compass-resolve/src/: lib.rs  members.rs
crates/compass-transcribe/: Cargo.toml
crates/compass-transcribe/src/: avi.rs  downloader.rs  lib.rs  models.rs  native.rs
crates/compass-transcribe/tests/: audio_coverage.rs  avi_acceptance.rs  downloader_acceptance.rs  downloader_coverage.rs  models_coverage.rs  native_acceptance.rs
crates/trail-cargo/: Cargo.toml
crates/trail-cargo/src/: lib.rs
crates/trail-cargo/tests/: python_oracle.rs
crates/trail-cli/: Cargo.toml  build.rs
crates/trail-cli/src/: dedup_commands.rs  hook_commands.rs  ingest_commands.rs  install_commands.rs  integration_commands.rs  label_commands.rs  lib.rs  provider_commands.rs  prs_commands.rs  result_commands.rs  semantic_commands.rs
crates/trail-cli/tests/: add_cli.rs  cluster_cli.rs  (+21 more)
crates/trail-core/: Cargo.toml
crates/trail-google-workspace/: Cargo.toml
crates/trail-graph/: Cargo.toml
crates/trail-graphdb/: Cargo.toml
crates/trail-ingest/: Cargo.toml
crates/trail-languages/: Cargo.toml
crates/trail-mcp/: Cargo.toml
crates/trail-media/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: avi_audio.rs  cli_args.rs  cql_params.rs  cql_source.rs  graph_input.rs  ignore_input.rs  manifest_input.rs  renderer_input.rs  semantic_fragment.rs  source_input.rs
(+420 files in other folders)
