[workspace]
members = [
    "crates/trail-cli",
    "crates/trail-core",
    "crates/trail-files",
    "crates/trail-graph",
    "crates/trail-languages",
    "crates/trail-media",
    "crates/trail-model",
    "crates/trail-output",
    "crates/trail-parity",
    "crates/trail-query",
    "crates/trail-resolve",
    "crates/trail-semantic",
    "crates/trail-transcribe",
]
resolver = "3"
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/Graphify-Labs/graphify"
homepage = "https://github.com/Graphify-Labs/graphify"
readme = "README.md"
description = "Native local-first knowledge graph engine for source code and project artifacts"
keywords = ["knowledge-graph", "tree-sitter", "code-analysis", "graph", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
base64 = "0.22.1"
aws-config = { version = "=1.9.0", default-features = false, features = ["behavior-version-latest", "credentials-login", "credentials-process", "rt-tokio", "sso"] }
aws-sdk-bedrockruntime = { version = "=1.136.0", default-features = false, features = ["rt-tokio"] }
aws-smithy-http-client = { version = "=1.2.0", default-features = false, features = ["rustls-ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
notify = "8.2.0"
oxidize-pdf = { version = "4.1.1", default-features = false, features = ["compression"] }
ctrlc = "3.5.2"
strsim = "0.11"
rayon = "1"
regex = "1"
rubato = "0.16.2"
flate2 = "1.1.9"
roxmltree = "0.21.1"
serde_yaml_ng = "0.10.0"
thiserror = "2"
toml = { version = "1.1.3", features = ["preserve_order"] }
unicode-normalization = "0.1"
unicode-casefold = "0.2"
tempfile = "3"
symphonia = { version = "0.6.0", default-features = false, features = ["all"] }
time = { version = "=0.3.53", features = ["local-offset", "parsing"] }
tokio = { version = "1.49", features = ["rt-multi-thread"] }
tree-sitter = "0.26"
tree-sitter-dm = "0.25.1"
tree-sitter-language-pack = { version = "=1.13.1", default-features = false }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }
url = "2.5.8"
wait-timeout = "0.2.1"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
