[workspace]
members = [
    "crates/compass-analysis",
    "crates/compass-cargo",
    "crates/compass-cli",
    "crates/compass-core",
    "crates/compass-cypher",
    "crates/compass-files",
    "crates/compass-graph",
    "crates/compass-graphdb",
    "crates/compass-global",
    "crates/compass-google-workspace",
    "crates/compass-ingest",
    "crates/compass-ir",
    "crates/compass-languages",
    "crates/compass-media",
    "crates/compass-mcp",
    "crates/compass-model",
    "crates/compass-output",
    "crates/compass-parity",
    "crates/compass-postgres",
    "crates/compass-prs",
    "crates/compass-program",
    "crates/compass-query",
    "crates/compass-reflect",
    "crates/compass-resolve",
    "crates/compass-semantic",
    "crates/compass-history",
    "crates/compass-transcribe",
    "crates/compass-whisper",
    "vendor/compass-tree-sitter-language-pack",
]
resolver = "3"
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabbuild/compass"
homepage = "https://github.com/crabbuild/compass"
readme = "README.md"
description = "Native local-first knowledge graph engine for source code and project artifacts"
keywords = ["knowledge-graph", "tree-sitter", "code-analysis", "graph", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
aws-config = { version = "=1.9.0", default-features = false, features = ["behavior-version-latest", "credentials-login", "credentials-process", "rt-tokio", "sso"] }
aws-sdk-bedrockruntime = { version = "=1.136.0", default-features = false, features = ["rt-tokio"] }
aws-smithy-http-client = { version = "=1.2.0", default-features = false, features = ["rustls-ring"] }
candle-core = "=0.9.2"
candle-nn = "=0.9.2"
candle-transformers = "=0.9.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order"] }
rmp-serde = "1.3.1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
mimalloc = { version = "0.1.52", default-features = false }
notify = "8.2.0"
num_cpus = "1.17"
prolly-map = "=0.5.0"
prolly-store-sqlite = "=0.3.0"
oxidize-pdf = { version = "4.1.1", default-features = false, features = ["compression"] }
ctrlc = "3.5.2"
strsim = "0.11"
rayon = "1"
rand = "0.8.7"
realfft = "3.5.0"
regex = "1"
rmcp = { version = "2.2.0", default-features = false, features = ["server", "transport-io", "transport-streamable-http-server"] }
rubato = "0.16.2"
flate2 = "1.1.9"
glob = "0.3.3"
url = "2.5.8"
roxmltree = "0.21.1"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
rustls-platform-verifier = "0.6.2"
rustc-hash = "1.1.0"
serde_yaml_ng = "0.10.0"
thiserror = "2"
toml = { version = "1.1.3", features = ["preserve_order"] }
unicode-normalization = "0.1"
unicode-casefold = "0.2"
unicode-properties = { version = "0.1.4", features = ["general-category"] }
tempfile = "3"
atomicwrites = "=0.4.4"
tiktoken-rs = "0.7.0"
symphonia = { version = "0.6.0", default-features = false, features = ["all"] }
time = { version = "=0.3.53", features = ["formatting", "local-offset", "parsing"] }
tokio = { version = "1.49", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
tokio-postgres = { version = "0.7.18", features = ["array-impls"] }
tokio-postgres-rustls = { version = "0.14.0", default-features = false, features = ["native-certs", "ring", "webpki-roots"] }
tree-sitter = "0.26"
tree-sitter-dm = "0.25.1"
tree-sitter-language-pack = { package = "compass-tree-sitter-language-pack", version = "=1.13.1", path = "vendor/compass-tree-sitter-language-pack", default-features = false }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }
wait-timeout = "0.2.1"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["limit"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
