[package]
name = "compass-fuzz"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
tempfile = "3"
compass-model = { version = "0.1.0", path = "../crates/compass-model" }
compass-cli = { version = "0.1.0", path = "../crates/compass-cli" }
compass-cypher = { version = "0.1.0", path = "../crates/compass-cypher" }
compass-files = { version = "0.1.0", path = "../crates/compass-files" }
compass-graph = { version = "0.1.0", path = "../crates/compass-graph" }
compass-languages = { version = "0.1.0", path = "../crates/compass-languages" }
compass-output = { version = "0.1.0", path = "../crates/compass-output" }
compass-query = { version = "0.1.0", path = "../crates/compass-query" }
compass-semantic = { version = "0.1.0", path = "../crates/compass-semantic" }
compass-transcribe = { version = "0.1.0", path = "../crates/compass-transcribe", default-features = false }

[[bin]]
name = "graph_input"
path = "fuzz_targets/graph_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "semantic_fragment"
path = "fuzz_targets/semantic_fragment.rs"
test = false
doc = false
bench = false

[[bin]]
name = "avi_audio"
path = "fuzz_targets/avi_audio.rs"
test = false
doc = false
bench = false

[[bin]]
name = "source_input"
path = "fuzz_targets/source_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ignore_input"
path = "fuzz_targets/ignore_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_input"
path = "fuzz_targets/manifest_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cli_args"
path = "fuzz_targets/cli_args.rs"
test = false
doc = false
bench = false

[[bin]]
name = "renderer_input"
path = "fuzz_targets/renderer_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cql_source"
path = "fuzz_targets/cql_source.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cql_params"
path = "fuzz_targets/cql_params.rs"
test = false
doc = false
bench = false
