[package]
name = "compass-cargo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glob.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
compass-model = { path = "../compass-model", version = "0.1.2" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
