[package]
name = "compass-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "compass_cli"

[[bin]]
name = "compass"
path = "src/bin/compass.rs"

[dependencies]
ctrlc.workspace = true
glob.workspace = true
mimalloc.workspace = true
regex.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
compass-core = { path = "../compass-core", version = "0.1.2" }
compass-analysis = { path = "../compass-analysis", version = "0.1.2" }
compass-ir = { path = "../compass-ir", version = "0.1.2" }
compass-program = { path = "../compass-program", version = "0.1.2" }
compass-cypher = { path = "../compass-cypher", version = "0.1.2" }
compass-cargo = { path = "../compass-cargo", version = "0.1.2" }
compass-files = { path = "../compass-files", version = "0.1.2" }
compass-graph = { path = "../compass-graph", version = "0.1.2" }
compass-graphdb = { path = "../compass-graphdb", version = "0.1.2" }
compass-global = { path = "../compass-global", version = "0.1.2" }
compass-history = { path = "../compass-history", version = "0.1.2" }
compass-google-workspace = { path = "../compass-google-workspace", version = "0.1.2" }
compass-ingest = { path = "../compass-ingest", version = "0.1.2" }
compass-model = { path = "../compass-model", version = "0.1.2" }
compass-mcp = { path = "../compass-mcp", version = "0.1.2" }
compass-output = { path = "../compass-output", version = "0.1.2" }
compass-postgres = { path = "../compass-postgres", version = "0.1.2" }
compass-prs = { path = "../compass-prs", version = "0.1.2" }
compass-query = { path = "../compass-query", version = "0.1.2" }
compass-reflect = { path = "../compass-reflect", version = "0.1.2" }
compass-semantic = { path = "../compass-semantic", version = "0.1.2" }
url.workspace = true

[lints]
workspace = true
