[package]
name = "compass-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rayon.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
thiserror.workspace = true
compass-files = { path = "../compass-files", version = "0.1.0" }
compass-google-workspace = { path = "../compass-google-workspace", version = "0.1.0" }
compass-languages = { path = "../compass-languages", version = "0.1.0" }
compass-model = { path = "../compass-model", version = "0.1.0" }
compass-graph = { path = "../compass-graph", version = "0.1.0" }
compass-output = { path = "../compass-output", version = "0.1.0" }
compass-reflect = { path = "../compass-reflect", version = "0.1.0" }
compass-resolve = { path = "../compass-resolve", version = "0.1.0" }

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
