[package]
name = "compass-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prolly-map.workspace = true
prolly-store-sqlite.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tempfile.workspace = true
compass-files = { path = "../compass-files", version = "0.1.0" }
compass-model = { path = "../compass-model", version = "0.1.0" }

[target.'cfg(windows)'.dependencies]
# `replace_atomic` uses MoveFileExW(REPLACE_EXISTING | WRITE_THROUGH), providing the
# durable replacement contract that std::fs::rename and tempfile::persist do not.
atomicwrites.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
