[package]
name = "compass-languages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
flate2.workspace = true
roxmltree.workspace = true
serde_yaml_ng.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
compass-files = { path = "../compass-files", version = "0.1.1" }
compass-model = { path = "../compass-model", version = "0.1.1" }
tree-sitter.workspace = true
tree-sitter-dm.workspace = true
tree-sitter-language-pack.workspace = true
unicode-normalization.workspace = true
unicode-casefold.workspace = true
unicode-properties.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
