[package]
name = "compass-parity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
compass-cli = { version = "0.1.0", path = "../compass-cli" }
compass-core = { version = "0.1.0", path = "../compass-core" }
compass-files = { version = "0.1.0", path = "../compass-files" }
compass-graph = { version = "0.1.0", path = "../compass-graph" }
compass-languages = { version = "0.1.0", path = "../compass-languages" }
compass-media = { version = "0.1.0", path = "../compass-media" }
compass-mcp = { version = "0.1.0", path = "../compass-mcp" }
compass-model = { version = "0.1.0", path = "../compass-model" }
compass-output = { version = "0.1.0", path = "../compass-output" }
compass-query = { version = "0.1.0", path = "../compass-query" }
compass-reflect = { version = "0.1.0", path = "../compass-reflect" }
compass-resolve = { version = "0.1.0", path = "../compass-resolve" }
compass-semantic = { version = "0.1.0", path = "../compass-semantic" }
compass-transcribe = { version = "0.1.0", path = "../compass-transcribe" }

[lints]
workspace = true
