[package]
name = "compass-prs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true
compass-model = { path = "../compass-model", version = "0.1.1" }
wait-timeout.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
