[package]
name = "compass-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde_json.workspace = true
compass-model = { path = "../compass-model", version = "0.1.0" }
unicode-normalization.workspace = true

[lints]
workspace = true
