[package]
name = "compass-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
compass-cypher = { path = "../compass-cypher", version = "0.1.0" }
compass-model = { path = "../compass-model", version = "0.1.0" }
unicode-normalization.workspace = true

[dev-dependencies]
compass-graphdb = { path = "../compass-graphdb", version = "0.1.0" }

[lints]
workspace = true
