[package]
name = "compass-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rayon.workspace = true
regex.workspace = true
serde_json.workspace = true
sha1.workspace = true
compass-languages = { path = "../compass-languages", version = "0.1.2" }
compass-model = { path = "../compass-model", version = "0.1.2" }

[lints]
workspace = true
