[package]
name = "compass-transcribe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["native-whisper"]
native-whisper = ["dep:compass-whisper"]

[dependencies]
sha1.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
symphonia.workspace = true
tempfile.workspace = true
thiserror.workspace = true
rubato.workspace = true
ureq.workspace = true
url.workspace = true
wait-timeout.workspace = true
compass-whisper = { version = "0.1.1", path = "../compass-whisper", optional = true }

[lints]
workspace = true
