[package]
name = "trail-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "trail_cli"

[[bin]]
name = "trail"
path = "src/bin/trail.rs"

[[bin]]
name = "graphify"
path = "src/bin/graphify.rs"

[dependencies]
ctrlc.workspace = true
serde_json.workspace = true
trail-core = { path = "../trail-core" }
trail-graph = { path = "../trail-graph" }
trail-model = { path = "../trail-model" }
trail-output = { path = "../trail-output" }
trail-query = { path = "../trail-query" }

[lints]
workspace = true
