[package]
name = "trail-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "trail_cli"

[[bin]]
name = "trail"
path = "src/bin/trail.rs"

[[bin]]
name = "graphify"
path = "src/bin/graphify.rs"

[dependencies]
ctrlc.workspace = true
serde_json.workspace = true
trail-core = { path = "../trail-core", version = "0.1.0" }
trail-files = { path = "../trail-files", version = "0.1.0" }
trail-graph = { path = "../trail-graph", version = "0.1.0" }
trail-model = { path = "../trail-model", version = "0.1.0" }
trail-output = { path = "../trail-output", version = "0.1.0" }
trail-query = { path = "../trail-query", version = "0.1.0" }
trail-semantic = { path = "../trail-semantic", version = "0.1.0" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
