[package]
name = "trail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
sha2.workspace = true
trail-model = { path = "../trail-model" }
trail-graph = { path = "../trail-graph" }

[lints]
workspace = true
