[package]
name = "trail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rayon.workspace = true
notify.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
trail-files = { path = "../trail-files" }
trail-languages = { path = "../trail-languages" }
trail-model = { path = "../trail-model" }
trail-graph = { path = "../trail-graph" }
trail-output = { path = "../trail-output" }
trail-resolve = { path = "../trail-resolve" }

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
